--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy to PYPI
 on:
   push:
     branches:
-      - develop
+      - master
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools
-          python3 -m pip install --upgrade twine wheel
+          python3 -m pip install --upgrade twine wheel build
       - name: Create and check packages
         run: |
           python -m build --sdist --wheel --outdir dist/ .
