--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Install depenedncies
         run: |
           python -m pip install --upgrade pip
-          pip install networkx pandas jinja2
+          pip install wheel networkx=2.5 pandas jinja2 requests
       - name: Run unittests
         run: python -m unittest
       - name: Run doctests
