--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,8 +11,11 @@ jobs:
       - uses: actions/setup-python@v1
       - name: Install depenedncies
         run: |
-          python -m pip install --upgrade pip
-          pip install wheel networkx=2.5 pandas jinja2 requests
+          python -m pip install --upgrade pip setuptools
+          pip install networkx==2.5 pandas jinja2 requests twine wheel build
+      - name: Create and check packages
+        run: |
+          python -m build --sdist --wheel --outdir dist/ .
       - name: Run unittests
         run: python -m unittest
       - name: Run doctests
